Introduced IncidentUnitRel for better handling and optimization.